# src/infrastructure/repositories/task/task.go
@@ -16,10 +16,10 @@ func New(conn *pgxpool.Pool) *Repo {
 	}
 }
 
-type Interval string
+type Granularity string
 
 const (
-	IntervalHour Interval = "hour"
+	GranularityHour Granularity = "hour"
 )
 
 type CreatedWithinPast string
@@ -40,14 +40,14 @@ const (
 	OrderByAlgoNew  OrderByAlgo = "new"
 )
 
-func (r *Repo) Create(subRedditName string, itemCount int64, interval Interval, by OrderByAlgo, itemsCreatedWithin CreatedWithinPast) error {
-	row := r.conn.QueryRow(context.Background(), "insert into tasks(subreddit_name, min_item_count, interval, order_by, items_created_within_past) VALUES ($1,$2,$3,$4, $5) RETURNING id", subRedditName, itemCount, interval, by, itemsCreatedWithin)
+func (r *Repo) Create(subRedditName string, itemCount int64, interval Granularity, by OrderByAlgo, itemsCreatedWithin CreatedWithinPast) error {
+	row := r.conn.QueryRow(context.Background(), "insert into tasks(subreddit_name, min_item_count, interval, order_by, posts_created_within_past) VALUES ($1,$2,$3,$4, $5) RETURNING id", subRedditName, itemCount, interval, by, itemsCreatedWithin)
 	var id int64
 	return row.Scan(&id)
 }
 
-func (r *Repo) Delete(subRedditName string) error {
-	_, err := r.conn.Exec(context.Background(), "DELETE FROM tasks where subreddit_name=$1", subRedditName)
+func (r *Repo) Delete(id int64) error {
+	_, err := r.conn.Exec(context.Background(), "DELETE FROM tasks where id=$1", id)
 	return err
 }
 
@@ -55,13 +55,32 @@ type Task struct {
 	Id                     int64
 	SubRedditName          string
 	MinItemCount           int64
-	Interval               Interval
+	Interval               Granularity
 	OrderBy                OrderByAlgo
 	PostsCreatedWithinPast CreatedWithinPast
 }
 
-func (r *Repo) GetByTaskInterval(every Interval) ([]Task, error) {
-	rows, err := r.conn.Query(context.Background(), "select id, subreddit_name, min_item_count, interval, order_by, items_created_within_past from tasks where interval = $1", every)
+func (r *Repo) GetTasksByInterval(every Granularity) ([]Task, error) {
+	rows, err := r.conn.Query(context.Background(), "select id, subreddit_name, min_item_count, interval, order_by, posts_created_within_past from tasks where interval = $1", every)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+
+	var tasks []Task
+	for rows.Next() {
+		var t Task
+		rows.Scan(&t.Id, &t.SubRedditName, &t.MinItemCount, &t.Interval, &t.OrderBy, &t.PostsCreatedWithinPast)
+		if err := rows.Err(); err != nil {
+			return []Task{}, err
+		}
+		tasks = append(tasks, t)
+	}
+	return tasks, nil
+}
+
+func (r *Repo) GetTasks() ([]Task, error) {
+	rows, err := r.conn.Query(context.Background(), "select id, subreddit_name, min_item_count, interval, order_by, posts_created_within_past from tasks")
 	if err != nil {
 		return nil, err
 	}
